Fixes CSS for custom printEventLogs page. Reformat syntax to be more legible.
* Fix email to update company information.

--- a/src/app/company-list/print.css
+++ b/src/app/company-list/print.css
@@ -1,7 +1,11 @@
-@media print
-{
-  .no-print, .no-print *
-  {
-    display: none ;
-  }
+/*@media print*/
+/*{*/
+  /*.no-print, .no-print **/
+  /*{*/
+    /*display: none ;*/
+  /*}*/
+/*}*/
+
+.table {
+  font-size: 40px;
 }
